# VSNT-CollisionAvoidance

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/asv_perception_classification/lib/asv_perception_classification/: yolo_subscriber
install/asv_perception_classification/share/asv_perception_classification/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/asv_perception_bringup/: CMakeLists.txt  package.xml
src/asv_perception_bringup/launch/classification/: classification.launch.py
src/asv_perception_bringup/launch/homography/: homography.launch.py
src/asv_perception_classification/: package.xml  setup.cfg  setup.py
src/asv_perception_classification/asv_perception_classification/: classification_debug.py  yolo_subscriber.py
src/asv_perception_common/: package.xml  setup.cfg  setup.py
src/asv_perception_homography/: package.xml  setup.cfg  setup.py
src/asv_perception_homography/asv_perception_homography/: homography.py  visualization.py
src/asv_perception_homography/scripts_homography/: FeedforwardImuController.py  calibrate_utils.py
src/asv_perception_interfaces/: CMakeLists.txt  package.xml
src/asv_perception_interfaces/msg/: ClassificationArray.msg  Homography.msg  Obstacle.msg  ObstacleArray.msg  RadarSegment.msg  RadarSpoke.msg
src/asv_perception_obstacleid/: CMakeLists.txt  package.xml  plugins.xml
src/asv_perception_obstacleid/include/: ObstacleProjectionNodelet.h  RadarToPointCloudNodelet.h  utils.h
src/asv_perception_obstacleid/include/asv_perception_obstacleid/: ClassifiedObstacle2d.h  PointCluster.h  obstacle_projection.h
src/asv_perception_obstacleid/src/: ObstacleProjectionNodelet.cpp  RadarToPointCloudNodelet.cpp
src/asv_perception_obstacleid_c/: CMakeLists.txt  package.xml
src/asv_perception_obstacleid_c/include/: ObstacleExtractionNode.h  ObstacleProjectionNode.h  utils.h
src/asv_perception_obstacleid_c/include/asv_perception_obstacleid_c/: ClassifiedObstacle2d.h  ObstacleProjectionNode.h  PointCluster.h  classified_obstacle_projection.h
src/asv_perception_obstacleid_c/include/detail/: ClassifiedObstacle2d.h  Homography.h  PointCluster.h  classified_obstacle_projection.h
src/asv_perception_obstacleid_c/src/: ObstacleExtractionNode.cpp  ObstacleProjectionNode.cpp
src/asv_perception_obstacleid_py/: package.xml  setup.cfg  setup.py
src/asv_perception_obstacleid_py/asv_perception_obstacleid_py/: ObstacleProjectionNode.py
src/asv_perception_obstacleid_py/asv_perception_obstacleid_py/detail/: detail1.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/asv_perception_classification/lib/asv_perception_classification/: video_publisher
src/install/asv_perception_classification/share/asv_perception_classification/: package.sh  package.xml
src/log/: latest_build
temp/asv_perception_obstacleid/: CMakeLists.txt
temp/asv_perception_obstacleid/include/asv_perception_obstacleid/: classified_obstacle_projection.h
