<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>asv_perception_obstacleid_c</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="diegoptrach@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <build_export_depend>libpcl-all-dev</build_export_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>asv_perception_interfaces</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>image_transport</depend>

  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-io</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
